[gd_scene load_steps=5 format=3 uid="uid://3yatj6ifxvxm"]

[ext_resource type="Texture2D" uid="uid://ccjlygequ1rmc" path="res://assets/square.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://dlpjx3yxaqqad" path="res://src/Player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bpg736822sy2k" path="res://assets/triangle.png" id="3_i3pqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(38, 38)

[node name="Player" type="CharacterBody2D"]
collision_mask = 5
script = ExtResource("1_onrkg")

[node name="Gun" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(40, 0)
rotation = 1.5707964
scale = Vector2(0.075, 0.075)
texture = ExtResource("3_i3pqv")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.53333336, 1, 1)
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_4flbx")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i3pqv")

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="InvTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="CanDashTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="DashingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="InvTimer" to="." method="_on_inv_timer_timeout"]
[connection signal="timeout" from="CanDashTimer" to="." method="_on_can_dash_timer_timeout"]
[connection signal="timeout" from="DashingTimer" to="." method="_on_dashing_timer_timeout"]
